LU-6436 llite: ignore glimpse outdated file

AGL glimpse thread (ls -l) could try to access an outdated file whose
stripe object is under another IO, we'd detect this and AGL process
can ignore such files.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: If2eae871984a3ea3e7d2b1786c022df0d4ed9d9f